--- a/PP.Rmd
+++ b/PP.Rmd
@@ -228,6 +228,43 @@ class: inverse center middle
 
 ---
 
+# Data Visualization
+
+*   Time domain visualization
+
+*   Feature based visualization
+
+*   Change point analysis
+
+---
+# Time domain visualization-Districts
+
+
+```{r ,echo=FALSE, code=readLines("PD.R"),echo=FALSE,results='hide',message=FALSE,warning=FALSE}
+```
+
+
+```{r figurechapter09A, echo=FALSE, fig.align = 'center',message=FALSE, out.width = '90%', out.height = '80%',fig.height=7, fig.width=14}
+knitr::include_graphics("Figures/DP.JPG")
+```
+
+---
+# Time domain visualization-Districts
+
+```{r ,echo=FALSE, out.width = '100%', out.height = '100%',fig.height=7, fig.width=14}
+HM2
+```
+
+---
+
+# Feature-based visualization
+
+```{r figurechapter09FB, echo=FALSE, fig.align = 'center',message=FALSE, out.width = '100%', out.height = '80%',fig.height=5, fig.width=10}
+knitr::include_graphics("Figures/FB1.JPG")
+```
+
+---
+
 # Time series features
 
 .left-column[
@@ -246,16 +283,37 @@ colnames(Dengue_features[,-c(1:2)])
 
 ---
 
-# Time series features-Districts
+# Spatial hierarchical structure
+
+```{r figurechapter0004r1, echo=FALSE, fig.align = 'center',message=FALSE, out.width = '80%', out.height = '10%',fig.height=4, fig.width=10}
+knitr::include_graphics("Figures/F10.JPG")
+```
+
+---
+
+# Time series features
+
+```{r ,echo=FALSE}
+SHS_DataDengueTEST<-DataDengueTEST%>%fabletools::aggregate_key(Province/Districts,Counts=sum(Counts))
+```
+
 
 ```{r}
-Dengue_features<-DataDengueTEST %>% features(Counts, feature_set(pkgs = "feasts"))
+Dengue_features<-SHS_DataDengueTEST %>% features(Counts, feature_set(pkgs = "feasts"))
 Dengue_features
 ```
 
 ---
 
-# Excluded features from PCA - Districts
+# Feature-based visualization
+
+```{r figurechapter09FB2, echo=FALSE, fig.align = 'center',message=FALSE, out.width = '80%', out.height = '10%',fig.height=5, fig.width=10}
+knitr::include_graphics("Figures/FB3.JPG")
+```
+
+---
+
+# Excluded features from PCA
 
 ```{r ,echo=FALSE}
 Dengue_features %>%
@@ -264,79 +322,26 @@ Dengue_features %>%
 
 ---
 
-# Feature based visualization - Districts
+# Principal Component Analysis
+
+```{r ,echo=FALSE}
+library(broom)
+```
+
+```{r}
+pcs<-Dengue_features%>% dplyr::select(-c(1,2,31,33,35,37)) %>% prcomp(scale = TRUE) %>%
+  augment(Dengue_features)
+pcs
+```
+
+
+---
+
+# Feature-based visualization 
 
 ```{r ,echo=FALSE, out.width = '100%', out.height = '100%',fig.height=8, fig.width=16}
 library(broom)
 library(ggrepel)
-
-pcs <- Dengue_features %>%
-  dplyr::select(-c(1,2,31,33,35,37)) %>%
-  prcomp(scale = TRUE) %>%
-  augment(Dengue_features)
-
-
-FBVZ<-pcs %>%
-    ggplot(aes(x = .fittedPC1, y = .fittedPC2, col = Province, label=Districts)) +
-    geom_point() +
-    theme(aspect.ratio = 1)+
-    geom_text_repel(aes(label=Districts), max.overlaps = Inf)+
-    labs(x="PC1", y = "PC2")
-
-FBVZ<-FBVZ+ theme(legend.position = "bottom")
-
-FBVZ1<-pcs %>%
-    ggplot(aes(x = .fittedPC1, y = .fittedPC2, col = trend_strength, label=Districts)) +
-    geom_point() +
-    theme(aspect.ratio = 1)+
-    geom_text_repel(aes(label=Districts), max.overlaps = Inf)+
-    labs(x="PC1", y = "PC2",title = "Trend strength")+scale_color_viridis(option = "A")+
-  ggeasy::easy_center_title()
-
-FBVZ1<-FBVZ1+ theme(legend.position = "bottom")
-
-(FBVZ|FBVZ1)
-
-```
-
-
----
-
-# Feature based visualization - Districts
-
-```{r ,echo=FALSE, out.width = '100%', out.height = '100%',fig.height=8, fig.width=16}
-FBVZ2<-pcs %>%
-    ggplot(aes(x = .fittedPC1, y = .fittedPC2, col = spectral_entropy, label=Districts)) +
-    geom_point() +
-    theme(aspect.ratio = 1)+
-    geom_text_repel(aes(label=Districts), max.overlaps = Inf)+
-    labs(x="PC1", y = "PC2",title = "Entropy")+scale_color_viridis(option = "A")+
-  ggeasy::easy_center_title()
-FBVZ2<-FBVZ2+ theme(legend.position = "bottom")
-
-FBVZ3<-pcs %>%
-    ggplot(aes(x = .fittedPC1, y = .fittedPC2, col = seasonal_strength_year, label=Districts))     +geom_point() +
-    theme(aspect.ratio = 1)+
-    geom_text_repel(aes(label=Districts), max.overlaps = Inf)+
-    labs(x="PC1", y = "PC2",title = "Seasonal strength")+scale_color_viridis(option = "A")+
-  ggeasy::easy_center_title()
-FBVZ3<-FBVZ3+ theme(legend.position = "bottom")
-(FBVZ2|FBVZ3)
-
-```
-
----
-
-# Spatial hierarchical structure
-
-```{r figurechapter0004r1, echo=FALSE, fig.align = 'center',message=FALSE, out.width = '80%', out.height = '10%',fig.height=4, fig.width=10}
-knitr::include_graphics("Figures/F10.JPG")
-```
-
----
-# Feature based visualization 
-
-```{r ,echo=FALSE, out.width = '100%', out.height = '100%',fig.height=8, fig.width=16}
 A<-DataDengueTEST %>%fabletools::aggregate_key(Province/Districts,Counts=sum(Counts))
 DX<-A%>% features(Counts, feature_set(pkgs = "feasts"))
 DX$Districts<-c("Kandy","Matale","NuwaraEliya","Central","Ampara","Batticaloa","Kalmune","Trincomalee",
@@ -369,13 +374,14 @@ FBVZW<-FBVZW+ theme(legend.position = "bottom",legend.box = "vertical")+scale_co
 
 FBVZW1<-pcsW %>%
   ggplot(aes(x = .fittedPC1, y = .fittedPC2, col = trend_strength, label=Districts)) +
-  geom_point() +
+  geom_point(aes(size=trend_strength)) +
   theme(aspect.ratio = 1)+
   geom_text_repel(aes(label=Districts), max.overlaps = Inf)+
   labs(x="PC1", y = "PC2",title = "Trend strength")+scale_color_viridis(option = "A")+
-  ggeasy::easy_center_title()
+  ggeasy::easy_center_title()+guides(size = FALSE)
 
-FBVZW1<-FBVZW1+ theme(legend.position = "bottom",legend.box = "vertical")
+FBVZW1<-FBVZW1+ theme(legend.position = "bottom",legend.box = "vertical")+
+  labs(colour = NULL)
 
 (FBVZW|FBVZW1)
 
@@ -384,30 +390,134 @@ FBVZW1<-FBVZW1+ theme(legend.position = "bottom",legend.box = "vertical")
 
 ---
 
-```{r ,echo=FALSE, out.width = '100%', out.height = '100%',fig.height=10, fig.width=16}
+# Feature-based visualization 
+
+```{r ,echo=FALSE, out.width = '100%', out.height = '100%',fig.height=8, fig.width=16}
 
 FBVZW2<-pcsW %>%
   ggplot(aes(x = .fittedPC1, y = .fittedPC2, col = seasonal_strength_year, label=Districts)) +
-  geom_point() +
+  geom_point(aes(size=seasonal_strength_year)) +
   theme(aspect.ratio = 1)+
   geom_text_repel(aes(label=Districts), max.overlaps = Inf)+
   labs(x="PC1", y = "PC2",title = "Seasonal strength")+scale_color_viridis(option = "A")+
-  ggeasy::easy_center_title()
+  ggeasy::easy_center_title()+guides(size = FALSE)
 
-FBVZW2<-FBVZW2+ theme(legend.position = "bottom",legend.box = "vertical")
+FBVZW2<-FBVZW2+ theme(legend.position = "bottom",legend.box = "vertical")+
+  labs(colour = NULL)
 
 FBVZW3<-pcsW %>%
   ggplot(aes(x = .fittedPC1, y = .fittedPC2, col = spectral_entropy, label=Districts)) +
-  geom_point() +
+  geom_point(aes(size=spectral_entropy)) +
   theme(aspect.ratio = 1)+
   geom_text_repel(aes(label=Districts), max.overlaps = Inf)+
   labs(x="PC1", y = "PC2",title = "Entropy")+scale_color_viridis(option = "A")+
-  ggeasy::easy_center_title()
+  ggeasy::easy_center_title()+guides(size = FALSE)
 
-FBVZW3<-FBVZW3+ theme(legend.position = "bottom",legend.box = "vertical")
+FBVZW3<-FBVZW3+ theme(legend.position = "bottom",legend.box = "vertical")+
+  labs(colour = NULL)
 
 (FBVZW2|FBVZW3)
 
+```
+
+---
+
+# Feature-based visualization 
+
+```{r ,echo=FALSE, out.width = '100%', out.height = '100%',fig.height=8, fig.width=16}
+
+FBVZW4<-pcsW %>%
+  ggplot(aes(x = .fittedPC1, y = .fittedPC2, col = acf1, label=Districts)) +
+  geom_point(aes(size=acf1)) +
+  theme(aspect.ratio = 1)+
+  geom_text_repel(aes(label=Districts), max.overlaps = Inf)+
+  labs(x="PC1", y = "PC2",title = "acf1")+scale_color_viridis(option = "A")+
+  ggeasy::easy_center_title()+guides(size = FALSE)
+
+FBVZW4<-FBVZW4+ theme(legend.position = "bottom",legend.box = "vertical")+
+  labs(colour = NULL)
+
+FBVZW5<-pcsW %>%
+  ggplot(aes(x = .fittedPC1, y = .fittedPC2, col = n_crossing_points, label=Districts)) +
+  geom_point(aes(size=n_crossing_points)) +
+  theme(aspect.ratio = 1)+
+  geom_text_repel(aes(label=Districts), max.overlaps = Inf)+
+  labs(x="PC1", y = "PC2",title = "crossing_points")+scale_color_viridis(option = "A")+
+  ggeasy::easy_center_title()+guides(size = FALSE)
+
+FBVZW5<-FBVZW5+ theme(legend.position = "bottom",legend.box = "vertical")+
+  labs(colour = NULL)
+
+(FBVZW4|FBVZW5)
+
+```
+
+---
+
+# Temporal hierarchical structure
+
+```{r figurechapter0005V1, echo=FALSE, fig.align = 'center',message=FALSE, out.width = '100%', out.height = '5%',fig.height=5, fig.width=10}
+knitr::include_graphics("Figures/F11.JPG")
+```
+
+---
+
+# Temporal hierarchical structure
+
+```{r figurechapter0005V2, echo=FALSE, fig.align = 'center',message=FALSE, out.width = '100%', out.height = '80%',fig.height=7, fig.width=14}
+TEM
+```
+
+---
+
+# Temporal hierarchical time series features
+
+```{r}
+library(tsfeatures)
+Temporal_DengueFeatures<-tsfeatures(aggts_total)
+Temporal_DengueFeatures
+```
+
+---
+
+# Excluded features from PCA
+
+```{r}
+Temporal_DengueFeatures[,c(1,10,11,12,20)]
+```
+
+---
+
+```{r}
+pr<-prcomp(Temporal_DengueFeatures[,-c(1,10,11,12,20)],scale=TRUE)
+```
+
+```{r ,echo=FALSE}
+pr$rotation
+```
+
+---
+
+# Feature-based visualization
+
+```{r ,echo=FALSE, out.width = '100%', out.height = '100%',fig.height=8, fig.width=16}
+(TEMFBV|TEMFBV1)
+```
+
+---
+
+# Feature-based visualization
+
+```{r ,echo=FALSE, out.width = '100%', out.height = '100%',fig.height=8, fig.width=16}
+(TEMFBV2|TEMFBV3)
+```
+
+---
+
+class: inverse center middle
+
+```{r figurechapter09N, echo=FALSE, fig.align = 'center',message=FALSE, out.width = '100%', out.height = '100%',fig.height=5, fig.width=10}
+knitr::include_graphics("Figures/FL1.JPG")
 ```
 
 ---
