--- a/PP.Rmd
+++ b/PP.Rmd
@@ -250,7 +250,7 @@ HM2
 
 # Feature-based visualization
 
-```{r figurechapter09FB, echo=FALSE, fig.align = 'center',message=FALSE, out.width = '100%', out.height = '80%',fig.height=5, fig.width=10}
+```{r figurechapter09FB, echo=FALSE, fig.align = 'center',message=FALSE, out.width = '100%', out.height = '40%',fig.height=5, fig.width=10}
 knitr::include_graphics("Figures/FB1.JPG")
 ```
 
@@ -298,7 +298,7 @@ Dengue_features
 
 # Feature-based visualization
 
-```{r figurechapter09FB2, echo=FALSE, fig.align = 'center',message=FALSE, out.width = '80%', out.height = '10%',fig.height=5, fig.width=10}
+```{r figurechapter09FB2, echo=FALSE, fig.align = 'center',message=FALSE, out.width = '60%', out.height = '20%',fig.height=5, fig.width=10}
 knitr::include_graphics("Figures/FB3.JPG")
 ```
 
@@ -792,6 +792,43 @@ knitr::include_graphics("Figures/MAP2.JPG")
 ```{r ,echo=FALSE, out.width = '42%', out.height = '10%',fig.height=7, fig.width=14,fig.align='center'}
 knitr::include_graphics("Figures/MAP3.JPG")
 ```
+
+---
+
+# Visualization of model performance-Weekly series
+
+```{r ,echo=FALSE}
+library(readxl)
+library(broom)
+Weekly_20AD<- read_excel("C:/Users/USER/Desktop/Book1.xlsx")
+Weekly_20AD<-Weekly_20AD[,-c(1)]
+
+pcsWk20AD <- Weekly_20AD %>%
+  dplyr::select(-c(1,2)) %>%
+  prcomp(scale = TRUE) %>%
+  augment(Weekly_20AD)
+
+Method<-c("HS","AVG","HS","ETS","HS","SNAIVE",rep("AVG",3),rep("HS",3),"AVG",rep("HS",2),
+          rep("AVG",3),rep("HS",2),rep("AVG",2),rep("HS",1),rep("AVG",2),rep("HS",2),
+          rep("AVG",2),rep("HS",6),rep("AVG",1),rep("HS",5),"SNAIVE",rep("HS",2),"SNAIVE",rep("HS",3),rep("SNAIVE",3),rep("AVG",2),
+          rep("HS",3),rep("AVG",1),rep("HS",3),rep("AVG",1),rep("HS",10),rep("AVG",1),"SNAIVE",
+          rep("HS",2),"SNAIVE","HS","AVG",rep("HS",2),rep("AVG",2),rep("HS",5),"SNAIVE","AVG",
+          "HS","NAIVE","HS","SNAIVE",rep("HS",8),"NAIVE",rep("HS",6),rep("HS",15),"SNAIVE",
+          "AVG",rep("NAIVE",2),"HS","SNAIVE",rep("HS",3),"AVG",rep("HS",2),"ETS",rep("HS",8))
+
+pcsWk20AD$Level<-Method
+
+FBVZWW1MAD<-pcsWk20AD %>%
+  ggplot(aes(x = .fittedPC1, y = .fittedPC2, col = Level,label=Districts)) +
+  geom_point(position=position_jitter(h=0.1, w=0.1),size=2) +
+  theme(aspect.ratio = 1)+
+  labs(x="PC1", y = "PC2")
+FBVZWW1MAD<-FBVZWW1MAD+ theme(legend.position = "right",legend.box = "vertical")+
+  labs(colour = NULL)+scale_color_manual(values = c("#e7298a","#e6ab02","#1b9e77","#762a83","#543005"))
+FBVZWW1MAD
+
+```
+
 
 ---
 
